--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "csv-parse": "^5.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2"
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
