--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "homepage": "https://boyleconnor.github.io/star-voting"
 }
