--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "format": "prettier --write .",
+    "format": "prettier .",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
